[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tic-tac-toe"
version = "1.0.0"
description = "A two-player Tic Tac Toe game built with Pygame"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.0.0",
]

[project.scripts]
tic-tac-toe = "main:main"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "game_state.py",
    "renderer.py",
    "constants.py",
    "ai.py",
    "pictures/",
]
